@@ -13,7 +13,8 @@ using namespace std;
 
 // global models, textures, fonts
 extern class model *merchant_medium, *subVII, *subXXI, *destroyer_tribal, *troopship_medium,
-	*battleship_malaya, *carrier_bogue, *torpedo_g7, *depth_charge_mdl, *gun_shell_mdl, *skyhemisphere;
+	*battleship_malaya, *carrier_bogue, *torpedo_g7, *depth_charge_mdl, *gun_shell_mdl,
+	*skyhemisphere, *corvette_mdl;
 extern class texture *water, *background, *gauge1,
 	*gauge2, *gauge3, *gauge4, *gauge5, *psbackgr, *panelbackgr,
 	*addleadangle, *torpempty, *torpreload, *torpunload, *uzo, *metalbackgr,
