@@ -49,6 +49,7 @@ token tokens[] = {
 	token(TKN_DESTROYERTRIBAL, "destroyertribal"),
 	token(TKN_BATTLESHIPMALAYA, "battleshipmalaya"),
 	token(TKN_CARRIERBOGUE, "carrierbogue"),
+	token(TKN_CORVETTE, "corvette"),
 	token(TKN_CONVOY, "convoy"),
 	token(TKN_WAYPOINT, "waypoint"),
 	token(TKN_SPEED, "speed"),
